# python-rawtools

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  DESCRIPTION  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  USAGE.md  byte-reader.py  comparator.py  data  nsihdr2raw.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
etc/: batch_nsihdr2raw.bat  batch_nsihdr2raw.sh
raw-utils/nsihdr2raw/: nsihdr2raw.py
raw-utils/qc-raw/: CHANGELOG.md  README.md  qc-raw.py
raw_utils/: find_raw_metadata.py
raw_utils/core/: convert.py  metadata.py
raw_utils/core/convert/: __main__.py  convert.py
raw_utils/inventory/: inventory.py
raw_utils/nsihdr2raw/: README.md  nsihdr2raw.py
raw_utils/qc/: qc_raw.py
raw_utils/raw_gen/: CHANGELOG.md  README.md  gen-raw.py
rawtools/: __init__.py  __main__.py  cli.py  constants.py  convert.py  crop.py  dat.py  generate.py  img2pcd.py  img2pct.py  img2raw.py  log.py  nsiefx.py  nsihdr.py  pcd2img.py  qualitycontrol.py  raw2img.py  rawtools.py  scale.py
rawtools/convert/: __init__.py  convert.py  utils.py
rawtools/convert/image/: img2pcd.py  nsiefx.py  nsihdr.py  raw.py  slices.py  utils.py
rawtools/gui/: nsihdr.py
rawtools/qualitycontrol/: qualitycontrol.py
rawtools/text/: dat.py
rawtools/utils/: dat.py  dataset.py  generate.py  path.py
tests/: __init__.py  cli_test.py  rawtools_test.py  test_rawtools.py
tests/convert/: conftest.py  raw_test.py  slices_test.py  utils_test.py
tests/utils/: dat_test.py  dataset_test.py  path_test.py  paths_test.py
util/: README.md  extract.py  scale.py
